ISIS-2288: fixes side-bar having same z-index as menu items

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/simple-sidebar.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/simple-sidebar.css
@@ -157,7 +157,7 @@ body {
 }
 
 #sidebar-wrapper {
-    z-index: 1000;
+    z-index: 990;
     position: fixed;
     height: 100%;
     overflow-y: auto;
